k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nyancat
  name: nyancat
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nyancat
status:
  loadBalancer: {}
